--- a/src/app/core/components/navigation-bar/navigation-bar.component.scss
+++ b/src/app/core/components/navigation-bar/navigation-bar.component.scss
@@ -1,3 +1,5 @@
+@import "/src/styles.scss";
+
 :host {
   display: flex;
 
@@ -27,18 +29,7 @@
         list-style: none;
 
         a {
-          padding: var(--default-padding);
-          text-decoration: none;
-
-          border-radius: var(--default-radius);
-          color: var(--theme-yellow-color);
-
-          font-weight: bold;
-          &:hover,
-          &.active {
-            background-color: var(--theme-yellow-color);
-            color: var(--theme-white-color);
-          }
+          @include button-style;
         }
 
         & + li {
