--- a/src/app/account-module/components/profile-info/avatar/avatar.component.scss
+++ b/src/app/account-module/components/profile-info/avatar/avatar.component.scss
@@ -35,7 +35,9 @@
     padding: 0;
     outline: 0;
 
-    cursor: pointer;
+    &:not(:disabled) {
+      cursor: pointer;
+    }
     filter: opacity(0);
 
     fa-icon {
@@ -48,7 +50,9 @@
 
     &:hover,
     &.fileOver {
-      filter: opacity(1);
+      &:not(:disabled) {
+        filter: opacity(1);
+      }
     }
 
     &:active {
