--- a/src/app/account-module/components/profile-info/profile-info.component.html
+++ b/src/app/account-module/components/profile-info/profile-info.component.html
@@ -1,48 +1,21 @@
-<form (submit)="onFormSubmit($event)">
-  <app-editable-field
-    [required]="true"
-    [(value)]="account.username"
-    labelText="ACCOUNT.USERNAME"
-    [enabled]="editing"
-  ></app-editable-field>
-  <app-editable-field
-    [(value)]="account.firstName"
-    labelText="ACCOUNT.FIRST_NAME"
-    [enabled]="editing"
-  ></app-editable-field>
-  <app-editable-field
-    [(value)]="account.lastName"
-    labelText="ACCOUNT.LAST_NAME"
-    [enabled]="editing"
-  ></app-editable-field>
-  <app-editable-field
-    type="email"
-    [(value)]="account.email"
-    labelText="ACCOUNT.EMAIL"
-    [enabled]="editing"
-  ></app-editable-field>
+<app-avatar
+  [uploader]="uploader"
+  [profilePhoto]="account.avatarUri"
+  [enableEditing]="editing"
+></app-avatar>
+<app-profile-form
+  [account]="account"
+  [enableEditing]="editing"
+  (accountChange)="onAccountFormUpdate($event)"
+>
   <nav>
-    <button
-      (click)="enableEditing($event)"
-      [class.hidden]="editing"
-      class="inverted"
-    >
-      {{ "ACCOUNT.EDIT" | translate }}
-    </button>
-    <button
+    <app-switch-button
       type="submit"
-      (click)="saveEdit()"
-      [class.hidden]="!editing"
-      class="inverted"
-    >
-      {{ "ACCOUNT.SAVE" | translate }}
-    </button>
-    <button
-      (click)="discardEdit($event)"
-      [class.hidden]="!editing"
-      class="inverted"
-    >
-      {{ "ACCOUNT.DISCARD" | translate }}
-    </button>
+      [on]="editing"
+      (click)="click($event)"
+    ></app-switch-button>
+    <h1>
+      {{ "ACCOUNT.EDIT" | translate }}
+    </h1>
   </nav>
-</form>
+</app-profile-form>
