--- a/src/app/account-module/components/profile-info/profile-info.component.scss
+++ b/src/app/account-module/components/profile-info/profile-info.component.scss
@@ -1,30 +1,16 @@
 @import "/src/styles.scss";
 
 :host {
-  margin-left: var(--default-padding);
-
-  form {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: var(--default-padding);
-  }
+  display: flex;
 
   nav {
     display: flex;
-    justify-content: space-between;
+    align-items: center;
 
-    button {
-      @include button-style;
-
-      flex-basis: 45%;
-
-      &:focus {
-        outline: 0;
-      }
-
-      &.hidden {
-        display: none;
-      }
+    h1 {
+      font-size: 1rem;
+      margin: 0;
+      margin-left: var(--default-padding);
     }
   }
 }
