--- a/src/app/account-module/components/profile-info/profile-form/profile-form.component.scss
+++ b/src/app/account-module/components/profile-info/profile-form/profile-form.component.scss
@@ -8,9 +8,55 @@
     grid-template-columns: 1fr 1fr;
     gap: var(--default-padding);
 
+    ul {
+      grid-column: 1 / 3;
+      margin: 0;
+      padding: 0;
+      position: relative;
+
+      display: flex;
+      flex-direction: column;
+
+      li {
+        overflow: hidden;
+        display: flex;
+        list-style: none;
+        transition: all var(--transition-time) ease;
+
+        button {
+          transition: all var(--transition-time) ease;
+
+          @include button-style;
+          position: relative;
+          top: 0%;
+
+          &:disabled {
+            top: 100%;
+          }
+        }
+
+        &:last-of-type {
+          height: 100%;
+          &.hidden {
+            height: 0;
+          }
+        }
+      }
+    }
+
     label {
       display: flex;
       flex-direction: column;
+
+      h1 {
+        margin: 0;
+        margin-bottom: 2px;
+        padding: 0;
+        padding-top: var(--default-padding);
+
+        font-size: 1.5rem;
+        color: var(--theme-dark-color);
+      }
 
       input {
         padding: 0;
@@ -24,6 +70,8 @@
         border: 0;
         color: var(--theme-yellow-color);
 
+        transition: all var(--transition-time) ease;
+
         &:disabled {
           background-color: transparent;
           color: var(--theme-dark-color);
@@ -32,6 +80,35 @@
 
         &:focus {
           outline: 0;
+        }
+      }
+
+      app-switch-button {
+        --height: 2rem;
+
+        margin-bottom: 2px;
+        margin-top: calc(1.5rem - var(--default-padding));
+      }
+    }
+
+    .two-container {
+      position: relative;
+      overflow: hidden;
+      label {
+        transition: all var(--transition-time) ease;
+        position: absolute;
+        bottom: 0%;
+
+        &.hidden {
+          pointer-events: none;
+          bottom: 100%;
+        }
+
+        & + label {
+          top: 0%;
+          &.hidden {
+            top: 100%;
+          }
         }
       }
     }
