--- a/src/app/core/components/switch-button/switch-button.component.html
+++ b/src/app/core/components/switch-button/switch-button.component.html
@@ -1,2 +1,10 @@
-<input [id]="id" [type]="type" [class.on]="on" (click)="onClick($event)" />
+<input
+  [disabled]="!enableEditing"
+  [checked]="value"
+  [id]="id"
+  [type]="type"
+  [class.on]="on"
+  (click)="onClick($event)"
+  (change)="onChange($event)"
+/>
 <label [for]="id"></label>
