improvements on contact methods

--- a/src/app/account-module/components/profile-info/profile-form/contact-method/contact-method.component.html
+++ b/src/app/account-module/components/profile-info/profile-form/contact-method/contact-method.component.html
@@ -3,6 +3,16 @@
     required
     [disabled]="!enableEditing"
     [(ngModel)]="contactMethod.methodValue"
+    (change)="onContactChage()"
   />
   {{ contactMethod.methodDefinition.methodIdentifier | translate }}
+</label>
+<label>
+  <app-switch-button
+    [enableEditing]="enableEditing"
+    type="checkbox"
+    [(value)]="contactMethod.visible"
+    (valueChange)="onContactChage()"
+  ></app-switch-button>
+  {{ "ACCOUNT.VISIBLE" | translate }}
 </label>
