--- a/src/app/account-module/components/profile-info/profile-info.component.scss
+++ b/src/app/account-module/components/profile-info/profile-info.component.scss
@@ -12,5 +12,10 @@
       margin: 0;
       margin-left: var(--default-padding);
     }
+
+    app-switch-button {
+      --width: 3rem;
+      --height: 1.2rem;
+    }
   }
 }
