--- a/src/app/core/components/radio/radio.component.html
+++ b/src/app/core/components/radio/radio.component.html
@@ -1,10 +1,11 @@
-<label *ngFor="let option of options; let i = index">
+<label *ngFor="let option of options">
   <input
     type="radio"
-    [checked]="option === select"
+    [disabled]="!enableEditing"
     [name]="name"
-    [value]="i"
-    (change)="onChange($event)"
+    [value]="option.value"
+    [(ngModel)]="select"
+    (change)="onChange()"
   />
   {{ option.label | translate }}
 </label>
