--- a/src/app/account-module/components/profile-info/profile-form/contact-method/contact-method.component.html
+++ b/src/app/account-module/components/profile-info/profile-form/contact-method/contact-method.component.html
@@ -1,18 +1,21 @@
 <label>
+  <app-switch-button
+    type="checkbox"
+    [enableEditing]="enableEditing"
+    [(value)]="contactMethod.visible"
+    (valueChange)="onContactChage()"
+  ></app-switch-button>
+  {{ "ACCOUNT.VISIBLE" | translate }}
+</label>
+
+<label>
   <input
     required
+    [type]="contactMethod.methodDefinition.methodInputType"
+    [pattern]="contactMethod.methodDefinition.methodInputRegex"
     [disabled]="!enableEditing"
     [(ngModel)]="contactMethod.methodValue"
     (change)="onContactChage()"
   />
   {{ contactMethod.methodDefinition.methodIdentifier | translate }}
-</label>
-<label>
-  <app-switch-button
-    [enableEditing]="enableEditing"
-    type="checkbox"
-    [(value)]="contactMethod.visible"
-    (valueChange)="onContactChage()"
-  ></app-switch-button>
-  {{ "ACCOUNT.VISIBLE" | translate }}
 </label>
