--- a/src/app/account-module/components/profile-info/profile-form/profile-form.component.scss
+++ b/src/app/account-module/components/profile-info/profile-form/profile-form.component.scss
@@ -8,6 +8,10 @@
     grid-template-columns: 1fr 1fr;
     gap: var(--default-padding);
 
+    ::slotted {
+      grid-row: 1 / 2;
+    }
+
     ul {
       grid-column: 1 / 3;
       margin: 0;
@@ -20,19 +24,32 @@
       li {
         overflow: hidden;
         display: flex;
+        align-items: center;
         list-style: none;
         transition: all var(--transition-time) ease;
 
         button {
           transition: all var(--transition-time) ease;
+          margin-left: 1rem;
 
           @include button-style;
           position: relative;
-          top: 0%;
+          width: 2rem;
+          height: 2rem;
+
+          display: flex;
+          align-items: center;
+          justify-content: center;
 
           &:disabled {
-            top: 100%;
+            margin-right: -3rem;
           }
+        }
+      }
+
+      nav {
+        button {
+          @include button-style;
         }
       }
     }
@@ -76,32 +93,44 @@
         }
       }
 
-      app-switch-button {
-        --height: 2rem;
-
+      app-radio {
         margin-bottom: 2px;
-        margin-top: calc(1.5rem - var(--default-padding));
       }
     }
 
     .two-container {
       position: relative;
       overflow: hidden;
-      label {
+      nav,
+      aside {
         transition: all var(--transition-time) ease;
         position: absolute;
         bottom: 0%;
+      }
 
+      nav {
+        display: flex;
+        flex-direction: column;
         &.hidden {
           pointer-events: none;
           bottom: 100%;
         }
+      }
 
-        & + label {
-          top: 0%;
-          &.hidden {
-            top: 100%;
-          }
+      aside {
+        h1 {
+          margin: 0;
+          margin-bottom: 2px;
+          padding: 0;
+          padding-top: var(--default-padding);
+
+          font-size: 1.5rem;
+          color: var(--theme-dark-color);
+        }
+
+        top: 0%;
+        &.hidden {
+          top: 100%;
         }
       }
     }
